--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,96 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* settings layout header-contenitor*/
+.container {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+
+
+header {
+  height: 100px;
+}
+
+ /* /settings layout header */
+
+
+/* settings layout nav */
+header nav {
+  width: 100%;
+  height: 100%;
+}
+
+.logo img,.list ul li ,.button button {
+  display: inline-block;
+}
+
+.list ul li {
+  color: white;
+  list-style: none;
+  text-transform: capitalize;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.button button {
+  font-weight: 300;
+  background-color: white;
+  border-radius: 20px;
+  text-transform: capitalize;
+  padding: 10px;
+  border:none;
+}
+
+/* /settings layout nav */
+
+
+
+
+/* settings layout jambo */
+.jambo {
+  height: 500px;
+  background-image: url(../img/item1.svg);
+}
+
+/* /settings layout jambo */
+
+
+
+
+/* debug  */
+.debug header {
+  background-color: crimson;
+}
+
+.debug header nav {
+  background-color: hotpink;
+}
+
+.debug .jambo {
+  background-color: blue;
+}
+
+.debug footer {
+  height: 500px;
+  background-color: gray;
+}
+
+.debug footer .top {
+  background-color: sienna;
+  height:400px;
+}
+
+.debug footer .bottom {
+  background-color: yellowgreen;
+  height:100px;
+
+}
+/* /debug */
+
+
+/* content */
+
+
