--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 .container {
   width: 80%;
   height: 100%;
+  max-width: 1170px;
   margin: 0 auto;
   position: relative;
 }
@@ -76,7 +77,7 @@ header nav {
   margin-bottom: 30px;
 }
 
-.container p {
+.container .title p {
   color:white;
   font-size: 20px;
   font-weight: 800;
@@ -112,6 +113,45 @@ header nav {
 /* /settings layout jambo */
 
 
+/* settings main */
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+.text h1,.text p {
+  width: 20%;
+}
+
+ .imgf img,.text h1,.text p {
+  float: left;
+  margin-left:20px;
+  
+}
+
+
+.right {
+  float: right;
+}
+
+main h1 {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+main p {
+  color: #363a3c;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+
+
+
+/* settings main */
 
 
 /* debug  */
