--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ header nav {
 
 
 .text h1,.text p {
-  width: 20%;
+  width: 40%;
 }
 
  .imgf img,.text h1,.text p {
@@ -132,9 +132,8 @@ header nav {
   
 }
 
-
-.right {
-  float: right;
+.textt {
+  text-align: center;
 }
 
 main h1 {
@@ -148,7 +147,10 @@ main p {
   line-height: 30px;
 }
 
-
+#box {
+  margin-top: 60px;
+  margin-bottom: 100px;
+}
 
 
 /* settings main */
