--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
   height: 100%;
   max-width: 1170px;
   margin: 0 auto;
-  position: relative;
 }
 
 
@@ -29,16 +28,25 @@ header nav {
   height: 100%;
 }
 
-.logo img,.list ul li ,.button button {
+.list,.logo,.button {
   display: inline-block;
+  margin-left: 50px;
 }
 
-.list ul li a {
+.logo {
+  vertical-align:middle;
+}
+
+
+.list ul li {
   color: white;
   list-style: none;
   text-transform: capitalize;
   font-family: 'Times New Roman', Times, serif;
   margin:0 10px;
+  display: inline-block;
+  line-height: 100px;
+  vertical-align: middle;
 }
 
 .button button {
@@ -48,7 +56,11 @@ header nav {
   text-transform: capitalize;
   padding: 10px;
   border:none;
+  margin-left: 20%;
 }
+
+
+
 
 /* /settings layout nav */
 
@@ -160,6 +172,15 @@ main p {
 footer {
   background-color: #23272a;
 }
+
+.top {
+  height:500px;
+}
+
+.bottom {
+  height: 200px;
+}
+
 
 .top ul li {
   display: inline-block;
